# ase2025-starter-kit-practice

./: baselines.py  chunking.py  chunking_with_embeddings.py  data_analysis.py  groq.py  prefix_suffix_ast_analysis.py  prefix_suffix_ast_analysis_kt.py  prefix_suffix_ast_analysis_py.py  pyproject.toml  static_analysis.py  static_analysis_ast.py  testing_groq.py
Evaluation/: evaluation.py
predictions/: python-practice-bm25.jsonl
