[tool.poetry]
name = "ase2025-starter-kit"
version = "0.1.0"
description = "Starter kit for the Co4 competition"
authors = ["Egor Bogomolov <egor.bogomolov@jetbrains.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jsonlines = "^4.0.0"
argparse = "^1.4.0"
tqdm = "^4.67.1"
rank-bm25 = "^0.2.2"
tiktoken = "^0.9.0"
matplotlib = "^3.10.3"
editdistance = "0.8.1"
tree-sitter = "^0.24.0"
tree-sitter-cpp = "^0.23.4"
tree-sitter-python = "^0.23.6"
langchain-ollama = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"